# macos-sip

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml
src/: codesign.rs  error.rs  lib.rs
